--- a/index.html
+++ b/index.html
@@ -5,7 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exemplo do GIT</title>
   </head>
-  <body>
-    <p>Primeira info da pag</p>
-  </body>
+  <body></body>
 </html>
