feat: adição de dois paragrafos

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exemplo do GIT ALTERACAO 2</title>
   </head>
-  <body></body>
+  <body>
+    <p>Teste</p>
+    <p>Teste</p>
+  </body>
 </html>
